--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
       content="Page d'accueil du site internet pour le Cinéma Neon Dynasty, spécialisé dans le cyberpunk néon futuriste avec une forte influence Japonaise."
     />
     <title>Accueil - Cinéma Neon Dynasty</title>
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav></nav>
+      <img
+        src="img/theater_banner.webp"
+        alt="Voici la bannière du Cinéma Neon Dynasty"
+      />
+    </header>
+    <main>
+      <h1>Cinema Neon Dynasty</h1>
+      <h2>A l'affiche</h2>
+    </main>
+    <footer></footer>
+  </body>
 </html>
