--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
       />
     </header>
     <main>
-      <h1>Cinema Neon Dynasty</h1>
-      <h2>A l'affiche</h2>
+      <h1>Cinema <span class="h1--highlight">Neon</span> Dynasty</h1>
+      <h2 class="semi-bold">A l'affiche</h2>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="#">CGU</a>
+      <p>|</p>
+      <a href="#">Préférences Cookies</a>
+      <br />
+      <p>© 2025 - Cinema Neon Dynasty</p>
+    </footer>
   </body>
 </html>
