--- a/index.html
+++ b/index.html
@@ -12,15 +12,103 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <nav>
+        <a href="index.html">
+          <img
+            class="navbar--logo"
+            src="img/logo.png"
+            alt="Voici le logo du cinéma."
+        /></a>
+
+        <div>
+          <ul class="navbar--list">
+            <li>
+              <a class="navbar--link" href="horaires.html"
+                >Horaires - Films à l'affiche</a
+              >
+            </li>
+            <li><a class="navbar--link" href="lecinema.html">Le cinéma</a></li>
+            <li>
+              <a class="navbar--link" href="infospratiques.html"
+                >Infos pratiques</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
       <img
+        class="header--banner"
         src="img/theater_banner.webp"
         alt="Voici la bannière du Cinéma Neon Dynasty"
       />
     </header>
     <main>
-      <h1>Cinema <span class="h1--highlight">Neon</span> Dynasty</h1>
-      <h2 class="semi-bold">A l'affiche</h2>
+      <section id="hero">
+        <h1>Cinema <span class="h1--highlight">Neon</span> Dynasty</h1>
+
+        <h2 class="semi-bold">A l'affiche</h2>
+
+        <div class="featuredMovies">
+          <div class="featuredMovies--card">
+            <div>
+              <img
+                class="featuredMovies--card__img"
+                src="img/akira_poster.webp"
+                alt="Voici l'affiche du film d'animation Akira."
+              />
+            </div>
+            <div class="featuredMovies--card__title">
+              <h3>Akira</h3>
+            </div>
+          </div>
+          <div class="featuredMovies--card">
+            <div>
+              <img
+                class="featuredMovies--card__img"
+                src="img/alteredcarbon_poster.webp"
+                alt="Voici l'affiche de la série Netflix Altered Carbon."
+              />
+            </div>
+            <div class="featuredMovies--card__title">
+              <h3>Altered carbon</h3>
+            </div>
+          </div>
+          <div class="featuredMovies--card">
+            <div>
+              <img
+                class="featuredMovies--card__img"
+                src="img/bladerunner1982_poster.webp"
+                alt="Voici l'affiche du film Blade Runner sorti en 1982."
+              />
+            </div>
+            <div class="featuredMovies--card__title"><h3>Blade runner</h3></div>
+          </div>
+          <div class="featuredMovies--card">
+            <div>
+              <img
+                class="featuredMovies--card__img"
+                src="img/bladerunner2049_poster.webp"
+                alt="Voici l'affiche du film Blade Runner 2049."
+              />
+            </div>
+            <div class="featuredMovies--card__title">
+              <h3>Blade runner 2049</h3>
+            </div>
+          </div>
+          <div class="featuredMovies--card">
+            <div>
+              <img
+                class="featuredMovies--card__img"
+                src="img/ghostintheshell_poster.webp"
+                alt="Voici l'affiche du film d'animation Ghost in the Shell."
+              />
+            </div>
+            <div class="featuredMovies--card__title">
+              <h3>Ghost in the shell</h3>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <a href="#">CGU</a>
