--- a/infospratiques.html
+++ b/infospratiques.html
@@ -42,7 +42,30 @@
         alt="Voici la bannière du Cinéma Neon Dynasty"
       />
     </header>
-    <main></main>
+    <main>
+      <h1>Infos Pratiques</h1>
+      <div class="hero--title"><h2>Nos salles</h2></div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+        cupiditate soluta, exercitationem unde molestias, dignissimos, eaque
+        autem voluptatem repudiandae numquam dolorem fugiat placeat sint ipsam!
+        Voluptatem nihil sunt cupiditate libero.
+      </p>
+      <div class="hero--title"><h2>Tarifs</h2></div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+        officia deserunt ipsa esse quos soluta ut culpa debitis reiciendis
+        eligendi earum quaerat dolor molestias. Totam laudantium obcaecati
+        assumenda quos recusandae!
+      </p>
+      <h2>Accessibilité</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad atque
+        animi, nihil tempore itaque sapiente laboriosam reiciendis natus,
+        expedita, eos iure omnis quia. Sint repudiandae officia dolore cumque
+        soluta?
+      </p>
+    </main>
     <footer>
       <a href="#">CGU</a>
       <p>|</p>
