--- a/lecinema.html
+++ b/lecinema.html
@@ -42,7 +42,23 @@
         alt="Voici la bannière du Cinéma Neon Dynasty"
       />
     </header>
-    <main></main>
+    <main>
+      <h1>Le cinéma</h1>
+      <h2 class="semi-bold">Accueil et services</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, molestiae
+        at maiores voluptates eaque incidunt nemo! Alias, asperiores labore.
+        Vitae dicta voluptatum deserunt impedit sapiente commodi quaerat quasi,
+        eius illo.
+      </p>
+      <h2>Accès</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
+        veniam nihil itaque pariatur, aliquam molestiae deserunt, cum eum
+        reprehenderit reiciendis debitis quaerat adipisci alias et! Quasi nobis
+        itaque aut dolores.
+      </p>
+    </main>
     <footer>
       <a href="#">CGU</a>
       <p>|</p>
