adding movie cards and json

--- a/horaires.html
+++ b/horaires.html
@@ -9,6 +9,8 @@
     />
     <title>Horaires - Les Films à l'affiche</title>
     <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/horaires.min.css" />
+    <script type="module" src="movies.js"></script>
   </head>
   <body>
     <header>
@@ -42,7 +44,9 @@
         alt="Voici la bannière du Cinéma Neon Dynasty"
       />
     </header>
-    <main></main>
+    <main>
+      <section class="fiches"></section>
+    </main>
     <footer>
       <a href="#">CGU</a>
       <p>|</p>
