--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <title>Accueil - Cinéma Neon Dynasty</title>
     <link rel="stylesheet" href="css/style.min.css" />
     <script type="module" src="style.js"></script>
+    <script type="module" src="movies.js"></script>
   </head>
   <body>
     <header>
+      <!--  navbar -->
       <nav>
         <a href="index.html">
           <img
@@ -21,14 +23,6 @@
             src="img/logo.png"
             alt="Voici le logo du cinéma."
         /></a>
-        <!--  burger menu for mobile & tablet -->
-        <!--   <div class="burgerMenu" onclick="toggleMenu()">
-          <div class="burgerMenu--line"></div>
-          <div class="burgerMenu--line"></div>
-          <div class="burgerMenu--line"></div>
-        </div> -->
-
-        <!--  menu deskop -->
         <div>
           <ul class="navbar--list">
             <li>
@@ -45,34 +39,17 @@
           </ul>
         </div>
       </nav>
-      <!--  <div class="mobileMenu" id="mobileNav">
-        <ul class="navbar--list">
-          <li>
-            <a class="navbar--link" href="horaires.html" onclick="toggleMenu()"
-              >Horaires - Films à l'affiche</a
-            >
-          </li>
-          <li>
-            <a class="navbar--link" href="lecinema.html" onclick="toggleMenu()"
-              >Le cinéma</a
-            >
-          </li>
-          <li>
-            <a
-              class="navbar--link"
-              href="infospratiques.html"
-              onclick="toggleMenu()"
-              >Infos pratiques</a
-            >
-          </li>
-        </ul>
-      </div> -->
-      <img
-        class="header--banner"
-        src="img/theater_banner.webp"
-        alt="Voici la bannière du Cinéma Neon Dynasty"
-      />
+      <div>
+        <img
+          class="header--banner"
+          src="img/theater_banner.webp"
+          alt="Voici la bannière du Cinéma Neon Dynasty"
+        />
+      </div>
     </header>
+    <!--  end of navbar / header -->
+
+    <!--   zone hero -->
     <main>
       <section class="hero">
         <div>
