--- a/horaires.html
+++ b/horaires.html
@@ -45,6 +45,15 @@
       />
     </header>
     <main>
+      <!--  sort and filter -->
+      <section class="filtres"></section>
+      <button class="btn-trier btn__highlight">Trier par prix croissant</button>
+      <br />
+      <button class="btn-filtrer btn__highlight">
+        Filtrer les films complets
+      </button>
+
+      <!-- movie cards  -->
       <section class="fiches"></section>
     </main>
     <footer>
