--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             src="img/logo.png"
             alt="Voici le logo du cinéma."
         /></a>
-        <div>
+        <!--  nav version pc  -->
+        <div class="navbar-pc">
           <ul class="navbar--list">
             <li>
               <a class="navbar--link" href="horaires.html"
@@ -36,6 +37,14 @@
                 >Infos pratiques</a
               >
             </li>
+          </ul>
+        </div>
+        <!--  nav version mobile  -->
+        <div class="navbar-mobile">
+          <ul>
+            <li><img src="" alt="" /></li>
+            <li><img src="" alt="" /></li>
+            <li><img src="" alt="" /></li>
           </ul>
         </div>
       </nav>
@@ -137,12 +146,17 @@
           >Réservez dès maintenant !</a
         >
       </section>
+      <img
+        class="footer--banner"
+        src="img/footer_banner.png"
+        alt="Image de la bannière du Cinema Neon Dynasty."
+      />
     </main>
     <footer class="footer">
-      <div>
-        <a href="#">CGU</a>
+      <div class="footer--link">
+        <a class="footer--link__decoration" href="#">CGU</a>
         <p>|</p>
-        <a href="#">Préférences Cookies</a>
+        <a class="footer--link__decoration" href="#">Préférences Cookies</a>
       </div>
       <br />
       <p>© 2025 - Cinema Neon Dynasty</p>
