--- a/infospratiques.html
+++ b/infospratiques.html
@@ -66,10 +66,12 @@
         soluta?
       </p>
     </main>
-    <footer>
-      <a href="#">CGU</a>
-      <p>|</p>
-      <a href="#">Préférences Cookies</a>
+    <footer class="footer">
+      <div class="footer--link">
+        <a class="footer--link__decoration" href="#">CGU</a>
+        <p>|</p>
+        <a class="footer--link__decoration" href="#">Préférences Cookies</a>
+      </div>
       <br />
       <p>© 2025 - Cinema Neon Dynasty</p>
     </footer>
