--- a/lecinema.html
+++ b/lecinema.html
@@ -59,10 +59,12 @@
         itaque aut dolores.
       </p>
     </main>
-    <footer>
-      <a href="#">CGU</a>
-      <p>|</p>
-      <a href="#">Préférences Cookies</a>
+    <footer class="footer">
+      <div class="footer--link">
+        <a class="footer--link__decoration" href="#">CGU</a>
+        <p>|</p>
+        <a class="footer--link__decoration" href="#">Préférences Cookies</a>
+      </div>
       <br />
       <p>© 2025 - Cinema Neon Dynasty</p>
     </footer>
