--- a/horaires.html
+++ b/horaires.html
@@ -22,20 +22,32 @@
               class="navbar--logo"
               src="img/logo.png"
               alt="Voici le logo du cinéma."
+              aria-label="Logo du cinéma, qui sert à revenir à l'accueil du site."
           /></a>
           <!--  nav version pc  -->
           <div class="navbar-pc">
             <ul class="navbar--list">
               <li>
-                <a class="navbar--link" href="horaires.html"
+                <a
+                  class="navbar--link"
+                  aria-label="Lien pour la page horaire"
+                  href="horaires.html"
                   >Horaires - Films à l'affiche</a
                 >
               </li>
               <li>
-                <a class="navbar--link" href="lecinema.html">Le cinéma</a>
+                <a
+                  class="navbar--link"
+                  aria-label="Lien pour la page cinéma"
+                  href="lecinema.html"
+                  >Le cinéma</a
+                >
               </li>
               <li>
-                <a class="navbar--link" href="infospratiques.html"
+                <a
+                  class="navbar--link"
+                  aria-label="lien pour la page infos pratiques"
+                  href="infospratiques.html"
                   >Infos pratiques</a
                 >
               </li>
@@ -49,6 +61,7 @@
                   ><img
                     src="icon/time.svg"
                     alt="Icone pour la page horaire de la navbar mobile"
+                    aria-label="Icone du lien pour aller à la page horaire"
                 /></a>
               </li>
               <li>
@@ -56,6 +69,7 @@
                   ><img
                     src="icon/cinema.svg"
                     alt="Icone pour la page cinema de la navbar mobile"
+                    aria-label="icone du lien pour aller à la page cinéma"
                 /></a>
               </li>
               <li>
@@ -63,6 +77,7 @@
                   ><img
                     src="icon/info.svg"
                     alt="Icone pour la page infos pratiques de la navbar mobile"
+                    aria-label="icone du lien pour aller à la page infos pratiques "
                 /></a>
               </li>
             </ul>
