add aria footer and READ.ME

--- a/lecinema.html
+++ b/lecinema.html
@@ -106,10 +106,36 @@
       </p>
     </main>
     <footer class="footer">
+      <div>
+        <a href="#"
+          ><img
+            class="footer--logo"
+            src="icon/instagram.svg"
+            alt="logo instagram"
+            aria-label="logo pour le lien vers instagram"
+        /></a>
+        <a href="#"
+          ><img
+            class="footer--logo"
+            src="icon/facebook.svg"
+            alt="logo facebook"
+            aria-label="logo pour le lien vers facebook"
+        /></a>
+      </div>
       <div class="footer--link">
-        <a class="footer--link__decoration" href="#">CGU</a>
+        <a
+          class="footer--link__decoration"
+          href="#"
+          aria-label="lien vers les conditions générales de vente"
+          >CGU</a
+        >
         <p>|</p>
-        <a class="footer--link__decoration" href="#">Préférences Cookies</a>
+        <a
+          class="footer--link__decoration"
+          href="#"
+          aria-label="lien vers les préférences concernant les cookies"
+          >Préférences Cookies</a
+        >
       </div>
       <br />
       <p>© 2025 - Cinema Neon Dynasty</p>
