--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
         class="footer--banner"
         src="img/footer_banner.png"
         alt="Image de la bannière du Cinema Neon Dynasty."
+        aria-label="Image de décoration"
       />
     </main>
     <footer class="footer">
@@ -220,15 +221,30 @@
             class="footer--logo"
             src="icon/instagram.svg"
             alt="logo instagram"
+            aria-label="logo pour le lien vers instagram"
         /></a>
         <a href="#"
-          ><img class="footer--logo" src="icon/facebook.svg" alt=""
+          ><img
+            class="footer--logo"
+            src="icon/facebook.svg"
+            alt="logo facebook"
+            aria-label="logo pour le lien vers facebook"
         /></a>
       </div>
       <div class="footer--link">
-        <a class="footer--link__decoration" href="#">CGU</a>
+        <a
+          class="footer--link__decoration"
+          href="#"
+          aria-label="lien vers les conditions générales de vente"
+          >CGU</a
+        >
         <p>|</p>
-        <a class="footer--link__decoration" href="#">Préférences Cookies</a>
+        <a
+          class="footer--link__decoration"
+          href="#"
+          aria-label="lien vers les préférences concernant les cookies"
+          >Préférences Cookies</a
+        >
       </div>
       <br />
       <p>© 2025 - Cinema Neon Dynasty</p>
