--- a/horaires.html
+++ b/horaires.html
@@ -100,7 +100,7 @@
       </button>
 
       <!-- movie cards  -->
-      <section class="fiches"></section>
+      <section class="fiches"><h1>Programmation</h1></section>
     </main>
     <footer class="footer">
       <div>
