--- a/index.html
+++ b/index.html
@@ -99,10 +99,48 @@
     <!--   zone hero -->
     <main>
       <section class="hero">
-        <div>
-          <h1 class="hero--title">
-            Cinema <span class="hero--title__highlight">Neon</span> Dynasty
-          </h1>
+        <div class="hero-container">
+          <div>
+            <h1 class="hero--title">
+              Cinema <span class="hero--title__highlight">Neon</span> Dynasty
+            </h1>
+          </div>
+          <div class="equalizer">
+            <div class="equalizer--top">
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+              <div class="equalizer--top__bar"></div>
+            </div>
+            <div class="equalizer--bottom">
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+              <div class="equalizer--bottom__bar"></div>
+            </div>
+          </div>
         </div>
         <div>
           <h2 class="semi-bold">A l'affiche</h2>
