--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
               <li>
                 <a href="horaires.html"
                   ><img
+                    class="navbar-mobile--list__icon"
                     src="icon/time.svg"
                     alt="Icone pour la page horaire de la navbar mobile"
                     aria-label="Icone du lien pour aller à la page horaire"
@@ -68,6 +69,7 @@
               <li>
                 <a href="lecinema.html"
                   ><img
+                    class="navbar-mobile--list__icon"
                     src="icon/cinema.svg"
                     alt="Icone pour la page cinema de la navbar mobile"
                     aria-label="icone du lien pour aller à la page cinéma"
@@ -76,6 +78,7 @@
               <li>
                 <a href="infospratiques.html"
                   ><img
+                    class="navbar-mobile--list__icon"
                     src="icon/info.svg"
                     alt="Icone pour la page infos pratiques de la navbar mobile"
                     aria-label="icone du lien pour aller à la page infos pratiques "
