--- a/infospratiques.html
+++ b/infospratiques.html
@@ -22,7 +22,7 @@
               alt="Voici le logo du cinéma."
               aria-label="Logo du cinéma, qui sert à revenir à l'accueil du site."
           /></a>
-          <!--  nav version pc  -->
+          <!--  nav pc version  -->
           <div class="navbar-pc">
             <ul class="navbar--list">
               <li>
@@ -51,7 +51,7 @@
               </li>
             </ul>
           </div>
-          <!--  nav version mobile  -->
+          <!--  nav mobile version  -->
           <div class="navbar-mobile">
             <ul class="navbar-mobile--list">
               <li>
@@ -89,29 +89,33 @@
       />
     </header>
     <main>
-      <h1>Infos Pratiques</h1>
-      <div class="hero--title"><h2>Nos salles</h2></div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-        cupiditate soluta, exercitationem unde molestias, dignissimos, eaque
-        autem voluptatem repudiandae numquam dolorem fugiat placeat sint ipsam!
-        Voluptatem nihil sunt cupiditate libero.
-      </p>
-      <div class="hero--title"><h2>Tarifs</h2></div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
-        officia deserunt ipsa esse quos soluta ut culpa debitis reiciendis
-        eligendi earum quaerat dolor molestias. Totam laudantium obcaecati
-        assumenda quos recusandae!
-      </p>
-      <h2>Accessibilité</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad atque
-        animi, nihil tempore itaque sapiente laboriosam reiciendis natus,
-        expedita, eos iure omnis quia. Sint repudiandae officia dolore cumque
-        soluta?
-      </p>
+      <div>
+        <h1>Infos Pratiques</h1>
+        <div><h2>Nos salles</h2></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+          cupiditate soluta, exercitationem unde molestias, dignissimos, eaque
+          autem voluptatem repudiandae numquam dolorem fugiat placeat sint
+          ipsam! Voluptatem nihil sunt cupiditate libero.
+        </p>
+        <div><h2>Tarifs</h2></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+          officia deserunt ipsa esse quos soluta ut culpa debitis reiciendis
+          eligendi earum quaerat dolor molestias. Totam laudantium obcaecati
+          assumenda quos recusandae!
+        </p>
+        <h2>Accessibilité</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad
+          atque animi, nihil tempore itaque sapiente laboriosam reiciendis
+          natus, expedita, eos iure omnis quia. Sint repudiandae officia dolore
+          cumque soluta?
+        </p>
+      </div>
     </main>
+
+    <!--    footer zone -->
     <footer class="footer">
       <div>
         <a href="#"
