--- a/lecinema.html
+++ b/lecinema.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <!--  navbar -->
+      <!--  navbar zone -->
       <nav>
         <div class="navbar">
           <a href="index.html">
@@ -22,7 +22,7 @@
               alt="Voici le logo du cinéma."
               aria-label="Logo du cinéma, qui sert à revenir à l'accueil du site."
           /></a>
-          <!--  nav version pc  -->
+          <!--  navbar pc version  -->
           <div class="navbar-pc">
             <ul class="navbar--list">
               <li>
@@ -51,7 +51,7 @@
               </li>
             </ul>
           </div>
-          <!--  nav version mobile  -->
+          <!--  navbar mobile version   -->
           <div class="navbar-mobile">
             <ul class="navbar-mobile--list">
               <li>
@@ -85,26 +85,39 @@
       <img
         class="header--banner"
         src="img/theater_banner.webp"
-        alt="Voici la bannière du Cinéma Neon Dynasty"
+        alt="Voici la bannière du site Cinéma Neon Dynasty"
+        aria-label="bannière du site internet"
       />
     </header>
+
+    <!--  main zone  -->
     <main>
-      <h1>Le cinéma</h1>
-      <h2 class="semi-bold">Accueil et services</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, molestiae
-        at maiores voluptates eaque incidunt nemo! Alias, asperiores labore.
-        Vitae dicta voluptatum deserunt impedit sapiente commodi quaerat quasi,
-        eius illo.
-      </p>
-      <h2>Accès</h2>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
-        veniam nihil itaque pariatur, aliquam molestiae deserunt, cum eum
-        reprehenderit reiciendis debitis quaerat adipisci alias et! Quasi nobis
-        itaque aut dolores.
-      </p>
+      <div class="container">
+        <h1>Le cinéma</h1>
+        <h2 class="semi-bold">Accueil et services</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
+          molestiae at maiores voluptates eaque incidunt nemo! Alias, asperiores
+          labore. Vitae dicta voluptatum deserunt impedit sapiente commodi
+          quaerat quasi, eius illo.
+        </p>
+        <h2>Accès</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
+          veniam nihil itaque pariatur, aliquam molestiae deserunt, cum eum
+          reprehenderit reiciendis debitis quaerat adipisci alias et! Quasi
+          nobis itaque aut dolores.
+        </p>
+
+        <h2>Nous contacter</h2>
+        <p>
+          Email : contact@cinemaneondynasty.fr <br />
+          Numéro de téléphone : 05.00.00.00.00 <br />
+        </p>
+      </div>
     </main>
+
+    <!--  footer zone -->
     <footer class="footer">
       <div>
         <a href="#"
