add mixin and nesting

--- a/horaires.html
+++ b/horaires.html
@@ -104,7 +104,9 @@
 
       <!-- movie cards  -->
       <section class="fiches">
-        <h1 class="fiches--title">Programmation</h1>
+        <div class="container">
+          <h1 class="fiches--title">Programmation</h1>
+        </div>
       </section>
     </main>
     <footer class="footer">
