--- a/infospratiques.html
+++ b/infospratiques.html
@@ -89,7 +89,7 @@
       />
     </header>
     <main>
-      <div>
+      <div class="container">
         <h1>Infos Pratiques</h1>
         <div><h2>Nos salles</h2></div>
         <p>
