--- a/horaires.html
+++ b/horaires.html
@@ -106,6 +106,7 @@
       <section class="fiches">
         <div class="container">
           <h1 class="fiches--title">Programmation</h1>
+          <progress id="progressBar"></progress>
         </div>
       </section>
     </main>
