--- a/horaires.html
+++ b/horaires.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
 
     <script type="module" src="movies.js"></script>
+    <script type="module" src="burger.js"></script>
   </head>
   <body>
     <header>
@@ -54,32 +55,15 @@
             </ul>
           </div>
           <!--  nav version mobile  -->
-          <div class="navbar-mobile">
-            <ul class="navbar-mobile--list">
-              <li>
-                <a href="horaires.html"
-                  ><img
-                    src="icon/time.svg"
-                    alt="Icone pour la page horaire de la navbar mobile"
-                    aria-label="Icone du lien pour aller à la page horaire"
-                /></a>
-              </li>
-              <li>
-                <a href="lecinema.html"
-                  ><img
-                    src="icon/cinema.svg"
-                    alt="Icone pour la page cinema de la navbar mobile"
-                    aria-label="icone du lien pour aller à la page cinéma"
-                /></a>
-              </li>
-              <li>
-                <a href="infospratiques.html"
-                  ><img
-                    src="icon/info.svg"
-                    alt="Icone pour la page infos pratiques de la navbar mobile"
-                    aria-label="icone du lien pour aller à la page infos pratiques "
-                /></a>
-              </li>
+          <div id="burger-menu">
+            <span></span>
+          </div>
+
+          <div id="navbar-mobile--menu">
+            <ul>
+              <li><a href="horaires.html">Horaires - Films à l'affiche</a></li>
+              <li><a href="lecinema.html">Le cinéma</a></li>
+              <li><a href="infospratiques.html">Infos pratiques</a></li>
             </ul>
           </div>
         </div>
@@ -106,7 +90,6 @@
       <section class="fiches">
         <div class="container">
           <h1 class="fiches--title">Programmation</h1>
-          <progress id="progressBar"></progress>
         </div>
       </section>
     </main>
